--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
 </head>
 
 <body>
+    <nav>
 
-    
+    </nav>
+
+    <div>
+
+    </div>
+    <div>
+        <article>
+            <header>
+                <h1>A heading here</h1>
+                <p>Posted by John Doe</p>
+                <p>Some additional information here</p>
+              </header>
+        </article>
+    </div>
+    <div>
+
+    </div>
+    <footer>
+        <p>Author: Hege Refsnes</p>
+        <p><a href="mailto:hege@example.com">hege@example.com</a></p>
+    </footer> 
 </body>
 </html>
