finished index.html and it's css

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <nav>
         <div class="navigation">        
-            <a href="#">Home</a>
-            |
-            <a href="addPost.html">addPost</a>
+            <a href="index.html"><h4>Home</h4></a>
+            <h4>|</h4>
+            <a href="addPost.html"><h4>addPost</h4></a>
         </div>
         <div class="profilePhoto">
             <img src="media\profileMedia\profilePhoto.jpg" alt="profile Photo" width="30" height="30"> 
@@ -28,7 +28,7 @@
             <article>
                 <header>
                     <span><img src="media\profileMedia\poster1.jpg" alt="poster profile Photo" width="30" height="30"></span>
-                    <span><h3>Some date</h3></span>
+                    <span><h5>01.09.2022</h5></span>
                 </header>
                 <div class="postImage">
                     <img src="media\postMedia\postPhoto1.png" alt="posted photo" width="200" height="200"> 
@@ -39,14 +39,56 @@
             </article>
             <article>
                 <header>
-                    <span><img src="media\profileMedia\poster1.jpg" alt="poster profile Photo" width="30" height="30"></span>
-                    <span><h3>Some date</h3></span>
+                    <span><img src="media\profileMedia\poster2.jpg" alt="poster profile Photo" width="30" height="30"></span>
+                    <span><h5>02.09.2022</h5></span>
+                </header>
+                <div class="postText">
+                    <p>Made some delicious pancakes today! &#128525</p>
+                </div>
+            </article>
+            <article>
+                <header>
+                    <span><img src="media\profileMedia\poster3.jpg" alt="poster profile Photo" width="30" height="30"></span>
+                    <span><h5>03.09.2022</h5></span>
                 </header>
                 <div class="postImage">
-                    <img src="media\postMedia\postPhoto1.png" alt="posted photo" width="200" height="200"> 
+                    <img src="media\postMedia\post2.jpg" alt="posted photo" width="200" height="200"> 
                 </div>
                 <div class="postText">
-                    <p>What a beautiful day!</p>
+                    <p>Beautiful landscape!</p>
+                </div>
+            </article>
+            <article>
+                <header>
+                    <span><img src="media\profileMedia\poster4.jpg" alt="poster profile Photo" width="30" height="30"></span>
+                    <span><h5>04.09.2022</h5></span>
+                </header>
+                <div class="postImage">
+                    <img src="media\postMedia\post3.jpg" alt="posted photo" width="200" height="200"> 
+                </div>
+                <div class="postText">
+                    <p>Woww nature!</p>
+                </div>
+            </article>
+            <article>
+                <header>
+                    <span><img src="media\profileMedia\poster5.jpg" alt="poster profile Photo" width="30" height="30"></span>
+                    <span><h5>05.09.2022</h5></span>
+                </header>
+                <div class="postText">
+                    <p>Had a wonderful morning today!</p>
+                </div>
+            </article>
+            <article>
+                <header>
+                    <span><img src="media\profileMedia\poster6.png" alt="poster profile Photo" width="30" height="30"></span>
+                    <span><h5>06.09.2022</h5></span>
+                </header>
+                <div class="postImage">
+                    <img src="media\postMedia\post4.jpg" alt="posted photo" width="200" height="200"> 
+                </div>
+                <div class="postText">
+                    <p>Yesterday....</p>
                 </div>
             </article>
         </div>
@@ -54,7 +96,7 @@
 
         </div>
     </div>
-    <footer>
+    <footer id="footer">
         <p>FOOTER</p>
     </footer> 
 </body>
