--- a/login.html
+++ b/login.html
@@ -11,7 +11,30 @@
 </head>
 
 <body>
-
+    <nav>
+        <div class="navigation">        
+            <a href="index.html"><h2>Home</h2></a>
+        </div>
+        <div class="navigation">        
+            <a href="addPost.html"><h2>Add Post</h2></a>
+        </div>
+        <div class="profilePhoto">
+            <img src="media\profileMedia\poster5.jpg" alt="profile Photo" width="60" height="60"> 
+        </div>
+    </nav>
+    <div>
+        <h3>Welcome to PostIt</h3><br>
+        <h4>Create an account</h4><br>
+        <h5>or</h5><br>
+        <h5>Please log in</h5>
+        <form>
+            <input type="text" placeholder="Email" id="email" name="email"><br>
+            <input type="text" placeholder="Password" id="pward" name="pward"><br>
+            <input type="submit" value="Log in">
+        </form>
+        <p1>Forget password</p1>
+    </div>
+    
     
 </body>
 </html>
