--- a/login.html
+++ b/login.html
@@ -22,11 +22,11 @@
             <img src="media\profileMedia\poster5.jpg" alt="profile Photo" width="60" height="60"> 
         </div>
     </nav>
-    <div>
+    <div class="loginbox">
         <h3>Welcome to PostIt</h3><br>
         <h4>Create an account</h4><br>
         <h5>or</h5><br>
-        <h5>Please log in</h5>
+        <h5>Please log in</h5><br>
         <form>
             <input type="text" placeholder="Email" id="email" name="email"><br>
             <input type="text" placeholder="Password" id="pward" name="pward"><br>
