--- a/login.html
+++ b/login.html
@@ -27,11 +27,15 @@
         <h4>Create an account</h4><br>
         <h5>or</h5><br>
         <h5>Please log in</h5><br>
-        <form>
+        <div>
+            <form>
             <input type="text" placeholder="Email" id="email" name="email"><br>
             <input type="text" placeholder="Password" id="pward" name="pward"><br>
-            <input type="submit" value="Log in">
-        </form>
+            <a href="index.html" target="_blank" >
+                <input type="submit" value="Log in"> 
+            </a>
+            </form>
+        </div>
         <p1>Forget password</p1>
     </div>
     
