--- a/login.html
+++ b/login.html
@@ -15,16 +15,13 @@
         <div class="navigation">        
             <a href="index.html"><h2>Home</h2></a>
         </div>
-        <div class="navigation">        
-            <a href="addPost.html"><h2>Add Post</h2></a>
-        </div>
         <div class="profilePhoto">
             <img src="media\profileMedia\poster5.jpg" alt="profile Photo" width="60" height="60"> 
         </div>
     </nav>
     <div class="loginbox">
         <h3>Welcome to PostIt</h3><br>
-        <h4>Create an account</h4><br>
+        <h4 class="hover">Create an account</h4><br>
         <h5>or</h5><br>
         <h5>Please log in</h5><br>
         <div>
@@ -32,11 +29,11 @@
             <input type="text" placeholder="Email" id="email" name="email"><br>
             <input type="text" placeholder="Password" id="pward" name="pward"><br>
             <a href="index.html" target="_blank" >
-                <input type="submit" value="Log in"> 
+                <input type="submit" value="Log in" class="btn"> 
             </a>
             </form>
         </div>
-        <p1>Forget password</p1>
+        <p1 class="hover">Forget password</p1>
     </div>
     
     
