--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
             <form>
             <input type="text" placeholder="Email" id="email" name="email"><br>
             <input type="text" placeholder="Password" id="pward" name="pward"><br>
-            <a href="index.html" target="_blank" >
+            <a href="index.html">
                 <input type="submit" value="Log in" class="btn"> 
             </a>
             </form>
