--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
         <div>
             <form>
             <input type="text" placeholder="Email" id="email" name="email"><br>
-            <input type="text" placeholder="Password" id="pward" name="pward"><br>
+            <input type="password" placeholder="Password" id="pward" name="pward"><br>
             <a href="index.html">
                 <input type="submit" value="Log in" class="btn"> 
             </a>
