--- a/index.html
+++ b/index.html
@@ -25,72 +25,7 @@
         <div class="sideBar">
         </div>
         <div class="posts">
-            <article>
-                <header>
-                    <span><img src="media\profileMedia\poster1.jpg" alt="poster profile Photo" width="30" height="30"></span>
-                    <span><h5>01.09.2022</h5></span>
-                </header>
-                <div class="postImage">
-                    <img src="media\postMedia\postPhoto1.png" alt="posted photo" width="200" height="200"> 
-                </div>
-                <div class="postText">
-                    <p>What a beautiful day!</p>
-                </div>
-            </article>
-            <article>
-                <header>
-                    <span><img src="media\profileMedia\poster2.jpg" alt="poster profile Photo" width="30" height="30"></span>
-                    <span><h5>02.09.2022</h5></span>
-                </header>
-                <div class="postText">
-                    <p>Made some delicious pancakes today! &#128525</p>
-                </div>
-            </article>
-            <article>
-                <header>
-                    <span><img src="media\profileMedia\poster3.jpg" alt="poster profile Photo" width="30" height="30"></span>
-                    <span><h5>03.09.2022</h5></span>
-                </header>
-                <div class="postImage">
-                    <img src="media\postMedia\post2.jpg" alt="posted photo" width="200" height="200"> 
-                </div>
-                <div class="postText">
-                    <p>Beautiful landscape!</p>
-                </div>
-            </article>
-            <article>
-                <header>
-                    <span><img src="media\profileMedia\poster4.jpg" alt="poster profile Photo" width="30" height="30"></span>
-                    <span><h5>04.09.2022</h5></span>
-                </header>
-                <div class="postImage">
-                    <img src="media\postMedia\post3.jpg" alt="posted photo" width="200" height="200"> 
-                </div>
-                <div class="postText">
-                    <p>Woww nature!</p>
-                </div>
-            </article>
-            <article>
-                <header>
-                    <span><img src="media\profileMedia\poster5.jpg" alt="poster profile Photo" width="30" height="30"></span>
-                    <span><h5>05.09.2022</h5></span>
-                </header>
-                <div class="postText">
-                    <p>Had a wonderful morning today!</p>
-                </div>
-            </article>
-            <article>
-                <header>
-                    <span><img src="media\profileMedia\poster6.png" alt="poster profile Photo" width="30" height="30"></span>
-                    <span><h5>06.09.2022</h5></span>
-                </header>
-                <div class="postImage">
-                    <img src="media\postMedia\post4.jpg" alt="posted photo" width="200" height="200"> 
-                </div>
-                <div class="postText">
-                    <p>Yesterday....</p>
-                </div>
-            </article>
+            <h3>Posts will show here</h3>
         </div>
         <div class="sideBar">
 
