created json file and added new photos

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <span><h5>03.09.2022</h5></span>
                 </header>
                 <div class="postImage">
-                    <img src="media\postMedia\post2.jpg" alt="posted photo" width="200" height="200"> 
+                    <img src="media//postMedia//post2.jpg" alt="posted photo" width="200" height="200"> 
                 </div>
                 <div class="postText">
                     <p>Beautiful landscape!</p>
