post function changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="mainPart">
         <div class="sideBar">
         </div>
-        <div class="posts">
+        <div class="posts" id="posts_div">
             <h3>Posts will show here</h3>
         </div>
         <div class="sideBar">
