--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
             <h4>|</h4>
             <a href="addPost.html"><h4>addPost</h4></a>
         </div>
-        <div class="profilePhoto">
-            <img src="media\profileMedia\profilePhoto.jpg" alt="profile Photo" width="30" height="30"> 
+        <div id='profile' class="profilePhoto">
+            <img src="media\profileMedia\profilePhoto.jpg" alt="profile Photo" width="30" height="30">
         </div>
     </nav>
+    <div class="popup">
+        <p id="profileInfo"></p>
+    </div>
     <div class="mainPart">
         <div class="sideBar">
         </div>
