looks more now like the previous hw

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </nav>
     <div class="popup">
-        <p id="profileInfo"></p>
+        <h5 id="profileInfo"></h5>
     </div>
     <div class="mainPart">
         <div class="sideBar">
